# modeling

./: .gitmodules  README.md
distribution/: .gitignore  CMakeLists.txt  go.mod  main.go
distribution/distribution/: CMakeLists.txt  distribution.go  exponential.go  exponential_test.go  gamma.go  gamma_test.go  gaussian.go  gaussian_test.go  max_triangle.go  max_triangle_test.go  min_triangle.go  min_triangle_test.go  random.go  random_test.go  simpson.go  simpson_test.go  uniform.go  uniform_test.go
distribution/distribution/distribution-gui/: CMakeLists.txt
distribution/distribution/distribution-gui/include/distribution-gui/: distribution.h  exponential_histogram.h  gamma_histogram.h  gauss_histogram.h  histogram.h  max_triangle_histogram.h  min_triangle_histogram.h  utils.h  (+3 more)
distribution/distribution/distribution-gui/src/: distribution.cpp  exponential_histogram.cpp  gamma_histogram.cpp  gauss_histogram.cpp  main.cpp  max_triangle_histogram.cpp  min_triangle_histogram.cpp  random_histogram.cpp  simpson_histogram.cpp  uniform_histogram.cpp  utils.cpp
distribution/distribution/include/distribution/: utils.h
distribution/libs/: CMakeLists.txt
distribution/libs/distribution/: CMakeLists.txt
distribution/libs/distribution/src/: distribution.cpp  utils.cpp
distribution/libs/distribution/tests/: test_distribution.cpp  test_utils.cpp
distribution/libs/random/src/: random.cpp  utils.cpp
distribution/screens/: exponential.go  gamma.go  gaussian.go  max_triangle.go  min_triangle.go  simpson.go  uniform.go
distribution/utils/: distribute.go  distribute_test.go
(+23 files in other folders)
